--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
 
+<center>
+
+<h1>Peiraios Parking</h1>
+  
 <p>
 Διαθέτουμε θέσεις στάθμευσης μόνο με το μήνα σε πάρκινγκ στη Μεγάλου Βασιλείου 11, 11854 ΑΘΗΝΑ. 
 </p>
@@ -20,6 +24,8 @@
 Τηλέφωνο: 2103210026 καθημερινές από 11:00 έως 19:00.
 </p>
 
+</center>
+  
 </body>
 
 </html>
