--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Peiraios Parking</h1>
   
 <p>
-Διαθέτουμε θέσεις στάθμευσης μόνο με το μήνα σε πάρκινγκ στη Μεγάλου Βασιλείου 11, 11854 ΑΘΗΝΑ. 
+Διαθέτουμε θέσεις στάθμευσης μόνο με το μήνα σε πάρκινγκ στη διεύθυνση Βασιλείου του Μεγάλου 11, 11854 ΑΘΗΝΑ. 
 </p>
 
 <p>
@@ -23,6 +23,10 @@
 <p>
 Τηλέφωνο: 2103210026 καθημερινές από 11:00 έως 19:00.
 </p>
+
+<p>
+<a link="https://www.google.com/maps/place/%CE%92%CE%B1%CF%83%CE%B9%CE%BB%CE%B5%CE%AF%CE%BF%CF%85+%CE%A4%CE%BF%CF%85+%CE%9C%CE%B5%CE%B3%CE%AC%CE%BB%CE%BF%CF%85,+%CE%91%CE%B8%CE%AE%CE%BD%CE%B1+118+54/@37.9760059,23.7070116,17z/">Google Maps</a>
+<p>
 
 </center>
   
