--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-Η οδός Μεγάλου Βασιλείου είναι παράλληλη στην οδό Πειραιώς. 
+Η οδός Βασιλείου του Μεγάλου είναι πολύ κοντά στην οδό Πειραιώς και στη διασταύρωσή της με την οδό Πέτρου Ράλλη. 
 </p>
 
 <p>
