--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-<a href="https://www.google.com/maps/place/%CE%92%CE%B1%CF%83%CE%B9%CE%BB%CE%B5%CE%AF%CE%BF%CF%85+%CE%A4%CE%BF%CF%85+%CE%9C%CE%B5%CE%B3%CE%AC%CE%BB%CE%BF%CF%85,+%CE%91%CE%B8%CE%AE%CE%BD%CE%B1+118+54/@37.9760059,23.7070116,17z/">Google Maps</a>
+<a href="https://www.google.com/maps/place/%CE%92%CE%B1%CF%83%CE%B9%CE%BB%CE%B5%CE%AF%CE%BF%CF%85+%CE%A4%CE%BF%CF%85+%CE%9C%CE%B5%CE%B3%CE%AC%CE%BB%CE%BF%CF%85,+%CE%91%CE%B8%CE%AE%CE%BD%CE%B1+118+54/@37.9760059,23.7070116,17z/" target="_blank">Google Maps</a>
 <p>
 
 </center>
