--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-<a href="https://www.google.com/maps/place/Βασιλείου+Του+Μεγάλου+11,+Αθήνα+118+54/@37.9754486,23.7093903,57m/" target="_blank">Google Maps</a>
+<a href="https://www.google.com/maps/place/Βασιλείου+Του+Μεγάλου+11,+Αθήνα+118+54/@37.9755617,23.70727,17z/" target="_blank">Google Maps</a>
 <p>
 
 </center>
